test/ui/test/lowering/abnormally-bodiless.stderr
error[E012]: the declaration ‘blank’ does not have a body
  ┌─ ${TEST_FOLDER}/lowering/abnormally-bodiless.lushui:1:19
  │
1 │ blank: Declaration
  │                  ⟫⟪ missing definition
  │
 help: provide a definition for the declaration
  │
1 │ blank: Declaration = value
  │                   ~~~~~~~~

error[E012]: the declaration ‘Blank’ does not have a body
  ┌─ ${TEST_FOLDER}/lowering/abnormally-bodiless.lushui:3:11
  │
3 │ data Blank
  │          ⟫⟪ missing definition
  │
 help: provide a definition for the declaration
  │
3 │ data Blank of { … }
  │           ~~~~~~~~~

error[E015]: the declaration ‘Blank’ does not have a type annotation
  ┌─ ${TEST_FOLDER}/lowering/abnormally-bodiless.lushui:3:11
  │
3 │ data Blank
  │          ⟫⟪ missing mandatory type annotation
  │
 help: annotate the declaration with a type
  │
3 │ data Blank: Type
  │           ~~~~~~

error: aborting due to 3 previous errors

